Style products page

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -28,4 +28,11 @@
 #       enabled: "ON"
 
 en:
-  hello: "Hello world"
+  number:
+    currency:
+      format:
+        unit: "£"
+        precision: 2
+        separator: "."
+        delimiter: ","
+        format: "%u%n" # unit first, then number
